fix alignment issue

--- a/css/layout.css
+++ b/css/layout.css
@@ -484,6 +484,7 @@ body
 	width: 100%;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 footer
